# x-agent

./: .gitignore  README.md
agent-frontend/: index.html  package-lock.json  package.json  vite.config.ts
agent-frontend/src/: App.tsx  index.css
agent-frontend/src/api/: client.ts
agent-frontend/src/components/: AgentForm.tsx  AgentList.tsx  SessionPanel.tsx  ToolPanel.tsx
agent-frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  select.tsx  skeleton.tsx  tabs.tsx
agent-frontend/src/types/: index.ts
agent-platform/: .env.example  Dockerfile  docker-compose.yml  litellm_config.yaml  pyproject.toml  test_full.py
agent-platform/app/: config.py  main.py
agent-platform/app/api/: agents.py  chat.py  sessions.py  tools.py
agent-platform/app/db/: database.py
agent-platform/app/models/: agent.py  mcp_server.py  session.py
agent-platform/app/runtime/: executor.py  manager.py  mcp_client.py  tools.py
agent-platform/app/schemas/: agent.py  session.py  tool.py
docs/: agent-runtime.md  api.md  architecture.md  deployment.md  development.md  frontend.md
